# ardent

./: CMakeLists.txt  README.md  model.config  package.xml  transmission_plugins.xml
include/: ardent.h  body_kinematics.h  inverse_kinematics.h  joint.h  kinematics.h  leg_kinematics.h  robot.h
include/ardent/: body_kinematics.h  hardware_interface.h  joint.h  leg_kinematics.h  robot.h  simple_transmission.h  transmission.h
launch/: ardent_gazebo.launch  controller.launch
robot/params/: controller.yaml  params.yaml  position_controller.yaml
robot/urdf/: ardent.urdf  ardent.xacro  ardent_urdf.xacro
src/: ardent.cc  ardent.cpp  ardent_visualizer.cc  body_kinematics.cc  body_kinematics.cpp  hardware_interface.cc  inverse_kinematics.cpp  joint.cpp  leg_action_server.cc  leg_kinematics.cc  leg_kinematics.cpp  robot.cc  robot.cpp  simple_transmission.cc
test/: walking_test.cc
